syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.stuchlyf.dscvr.protoutils";
option java_outer_classname = "UtilProto";

package proto_utils;


message Empty {}